.github/terraform/vpc_security_sg.tf
resource "aws_security_group" "test" {
  name = "vpc_security_group_name"

  vpc_id = aws_vpc.terra.id

  ingress {
    description     = "Allow SSH traffic"
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.elb_security_grp.id]


  }

  ingress {
    description     = "Traffic from HTTPS"
    from_port       = 443
    to_port         = 443
    protocol        = "tcp"
    security_groups = [aws_security_group.elb_security_grp.id]

  }

  ingress {
    description     = "Traffic from HTTP"
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.elb_security_grp.id]

  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }

}
